final version of quiz

--- a/Quizzler-iOS13/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/Base.lproj/Main.storyboard
@@ -25,8 +25,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fal-oS-tEg">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSI-li-mhO">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="618"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSI-li-mhO" userLabel="Score Text">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="118"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuX-5m-EP3">
+                                        <rect key="frame" x="0.0" y="128" width="374" height="490"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -87,8 +93,9 @@
                     <connections>
                         <outlet property="answerFalseButton" destination="tbn-vQ-GyC" id="ThB-EG-ek6"/>
                         <outlet property="answerTrueButton" destination="oVw-Hl-IRe" id="2Hc-RE-0ej"/>
-                        <outlet property="questionTextLabel" destination="rSI-li-mhO" id="ajy-Vb-FIr"/>
+                        <outlet property="questionTextLabel" destination="OuX-5m-EP3" id="gLZ-5b-rVk"/>
                         <outlet property="quizProgressBar" destination="TXm-qh-7Xg" id="agC-X9-UsY"/>
+                        <outlet property="scoreLabel" destination="rSI-li-mhO" id="bfb-KL-f3I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
